--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,14 @@
     - "'state' in item and item['state'] == 'absent'"
   notify: Restart icinga2
 
+- name: Include trombik.x509_certificate
+  include_role:
+    name: trombik.x509_certificate
+  vars:
+    x509_certificate_vars: "{{ icinga2_x509_certificate_vars }}"
+  when:
+    - icinga2_include_role_x509_certificate
+
 - name: Enable icinga features
   ansible.builtin.command: "icinga2 feature enable {{ item['name'] | quote }}"
   args:
